--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:inputType="text"
         android:text="Name"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="133dp" />
+        tools:layout_editor_absoluteX="55dp" />
 
     <Button
         android:id="@+id/btnCalculate"
@@ -35,13 +35,15 @@
         android:onClick="onBtnCountClick"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spCountOptions" />
+        app:layout_constraintTop_toBottomOf="@+id/spCountOptions"
+        tools:ignore="OnClick" />
 
     <Spinner
         android:id="@+id/spCountOptions"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edUserInput" />
+        app:layout_constraintTop_toBottomOf="@+id/edUserInput"
+        tools:layout_editor_absoluteX="48dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
